--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,14 @@
 .App {
   text-align: center;
+  background-color: grey;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.players {
+  background-color: red;
+  margin: 10px auto;
+  width: 50%;
+  padding: 10px;
+  height: auto;
 }
 
 .App-link {
