--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,27 +1,20 @@
-.App {
+body {
   text-align: center;
   background-color: grey;
 }
 
 .players {
+  display: inline-block;
   background-color: red;
-  margin: 10px auto;
-  width: 50%;
+  margin: 10px;
+  width: 30%;
   padding: 10px;
   height: auto;
   border-radius: 5px; 
   border: solid 3px black;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dark-mode {
+  color: #fff;
+  background-color: black;
 }
